--- a/dydy2/styles.css
+++ b/dydy2/styles.css
@@ -154,3 +154,23 @@ h1 a {
     /*font-size: 1.2rem;*/
     font-weight: 500;
 }
+main p {
+    color: white;
+    font-size: 200px;
+    text-align: center;
+}
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1000;
+}
+
+footer p {
+    font-size: 1rem;
+}
