--- a/dydy2/styles.css
+++ b/dydy2/styles.css
@@ -170,7 +170,28 @@ footer {
     bottom: 0;
     z-index: 1000;
 }
-
-footer p {
-    font-size: 1rem;
+header h1 {
+    font-size: 25px;
+    font-weight: 70;
 }
+
+.welcome-text {
+    animation: pulse 1.5s infinite;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+    50% {
+        transform: scale(1.2); /* Slightly larger */
+        opacity: 0.8;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+} 
+
+
